- zeit von max 15 auf max 20 geändert
- promintere box zur bewertung der eigenschaften. von grau nach rot
 - information, mit Zeiger auf die Rating Box!
 - third step button größer
 - geklickte eigenschaften werden grün angezeigt
 - fadeIn/out pfeil zeiger
 - merkmal buttons style, ratingbox bgcolor, thirdbutton show hide
 - modal minimieren möglich
 - secondstep alert
 - third step button bild in tutorial
 - tutorial erweitert
 - schrift geändert zu open sans https://www.google.com/fonts
 some things to tutorial added